--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <title>Frontend Mentor | Todo app</title>
   <!-- My CSS Helper styles -->
-  <link rel="stylesheet" href="assets/css/simplified.css">
+ <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/WabweniBrian/css-utility-classes/assets/css/simplified.min.css">
   <!-- Custom stylesheets -->
   <link rel="stylesheet" href="assets/css/style.css">
 
